# rumo-sdk-python

./: .editorconfig  .gitignore  Makefile  README.md  post_content.ipynb  pyproject.toml  tutorial.ipynb
.github/: CODEOWNERS  auto_assign.yml
.github/workflows/: build.yml
src/rumo_sdk/: api_client.py  content_api.py  editorial_list_api.py  interactions_api.py  open_api.py  recommendation_api.py  search_api.py  sub_content_api.py  upload_report.py  users_api.py  utils.py
src/template/: add.py
tests/: conftest.py  test_add.py  test_api_client.py  test_content_api.py  test_editorial_list_api.py  test_interactions_api.py  test_post_content.py  test_recommendation_api.py  test_search_api.py  test_sub_content_api.py  test_upload_report.py  test_users_api.py  test_utils.py
