[tool.poetry]
name = "rumo-sdk"
version = "0.1.0"
description = "Python SDK for Rumo API"
authors = ["Spideo Developers <developers@spideo.tv>"]
readme = "README.md"
packages = [{include = "rumo_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
requests-mock = "^1.11.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
